--- a/src/components/forum/style.css
+++ b/src/components/forum/style.css
@@ -42,34 +42,86 @@ a{
 
 
 /* ------------------BOTON COMENTAR Y SU CONTENIDO-------------- */
-.main{
-  background-color: blue ;
-}
-.card-body{
-  width: 100%;  
+main{
+  margin: 5%;
   display: flex;
+  gap: 10px;
 }
 
-.card-bodyRight{
-  width: 70%;
-  height: auto;
-  background-color: blueviolet;
-  
+.main{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.card{
+  width: 80%
+}
+
+.card-body{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.btn{
+  width: 150px;
+  background-color: #161E4C;
+  border: none;
+  color: white;
+}
+.btn:hover{
+  background-color: #0c0e1b;
+  color: white;
+}
+.button{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.respuestas{
+  border: 1px solid grey;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.respuesta1{
+  display: flex;
+  border: 1px solid grey;
+  padding:0 10px ;
+  margin: 10px;
+  flex-direction: column;
+  font-size: 15px;
+  border-radius: 10px;
+}
+.footerRespuesta{
+  display: flex;
+  justify-content: flex-end;
+  gap: 5px;
+  font-size: 12px;
+  color: #5b5c5f;
+  font-weight: 600;
+  margin-top: -15px;
+}
+.pRespuesta{
+  font-weight: 700;
+}
+
+.Responder{
+  border-radius: 5px;
 }
 
 /* -------------------SECCION ASIDE ---------------------- */
 
-.father-aside{
-width: 30%;
-background-color: aqua;
-display: flex;
-justify-content: center;
+
+.aside{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .aside-son{
 width: 100%;
-height: 200px;
+height: 300px;
 border: 1px solid red;
-
 }
 
  /*------------------SECCION FOOTER------------------------------------*/
