--- a/src/components/wall/index.html
+++ b/src/components/wall/index.html
@@ -42,7 +42,7 @@
                             <a class="nav-link" aria-current="page" href="/src/components/objectLost/index.html">Objetos perdidos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Foro</a>
+                            <a class="nav-link" aria-current="page" href="/src/components/forum/index.html">Foro</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/src/components/singIn/index.html">Log In</a>
