--- a/src/components/forum/index.html
+++ b/src/components/forum/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">
+                <a class="navbar-brand" href="/index.html">
                     <img src="/src/assets/images/logo.png" alt="logoNav" width="150px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,19 +30,19 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./src/components/wall/index.html">Muro</a>
+                            <a class="nav-link" aria-current="page" href="/src/components/wall/index.html">Muro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./src/components/objectLost/index.html">Objetos perdidos</a>
+                            <a class="nav-link" aria-current="page" href="/src/components/objectLost/index.html">Objetos perdidos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Foro</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Foro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./src/components/singIn/index.html">Log In</a>
+                            <a class="nav-link" href="/src/components/singIn/index.html">Log In</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -95,7 +95,7 @@
                     By: (USUARIO)
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">¿Cómo realizar un bucle while</h5>
+                    <h5 class="card-title">¿Cómo realizar un bucle for</h5>
                     <p class="card-text">Compañeros, deseo realizar un programa me permita hacer una lista de supermercado, ¿Como hago?</p>
                     <div id="IDrespuestas" class="respuestas">
                         <p class="pRespuesta">Respuestas:</p>
