--- a/src/components/forum/style.css
+++ b/src/components/forum/style.css
@@ -43,9 +43,10 @@ a{
 
 /* ------------------BOTON COMENTAR Y SU CONTENIDO-------------- */
 main{
-  margin: 5%;
+  padding: 5%;
   display: flex;
   gap: 10px;
+  background-color: #A79FF1;
 }
 
 .main{
@@ -54,7 +55,8 @@ main{
   gap: 15px;
 }
 .card{
-  width: 80%
+  width: 80%;
+  box-shadow: 0 0 30px #000;
 }
 
 .card-body{
