--- a/src/components/objectLost/style.css
+++ b/src/components/objectLost/style.css
@@ -101,8 +101,9 @@ body{
   justify-content: center;
   text-align: center;
   overflow: hidden;
-  border-radius: 2%;
-  box-shadow: 0 2px 20px rgba(16, 22, 26, 0.3);
+  border-radius: 34px;
+  background-color: #161E4C;
+  box-shadow: 0 2px 20px rgba(6, 4, 22, 0.3);
 }
 
 .botonObjeto p{
