--- a/src/components/wall/styles.css
+++ b/src/components/wall/styles.css
@@ -13,17 +13,17 @@ h1,h2,h3{
     font-family:  "Ubuntu", sans-serif;
     font-weight: 800;
     background-color: #D9D9D9;
-    --bs-navbar-padding-x: 10%;
+    --bs-navbar-padding-x: 108px;
     --bs-navbar-padding-y: 0;
   }
-
   header{
     position: sticky;
     top: 0;
     box-shadow: 0 0 7px #000;
     z-index: 100;
   }
-
+  
+  
   .collapse{
     justify-content: flex-end;
   }
