--- a/src/components/forum/index.html
+++ b/src/components/forum/index.html
@@ -120,10 +120,9 @@
         
         <div class="aside" id="aside">
             <h2>INFORMACION</h2>
-            <div class="aside-son">  1 </div>
-            <div  class="aside-son"> 2 </div>
-            <div  class="aside-son"> 3 </div> 
-            <div  class="aside-son"> 4</div>
+            <div class="aside-son"><a href="/src/components/wall/index.html"><img src="/src/assets/images/imgPost2.jpg" alt=""></a></div>
+            <div  class="aside-son"><a href="/src/components/wall/index.html"><img src="/src/assets/images/imgPost.webp" alt=""></a></div>
+            <div  class="aside-son"><a href="/src/components/wall/index.html"><img src="/src/assets/images/imgPost3.jpg" alt=""></a></div> 
         </div>
     </main>
 
