--- a/src/components/forum/style.css
+++ b/src/components/forum/style.css
@@ -119,13 +119,20 @@ main{
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 15px;
 }
 .aside-son{
 width: 100%;
 height: 300px;
-border: 1px solid red;
+background-size: cover;
 }
 
+.aside-son img{
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  filter: drop-shadow(0 0 2px #000);  
+}
  /*------------------SECCION FOOTER------------------------------------*/
  .footer {
     display: flex;
